--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&subset=cyrillic&display=swap');
+    </style>
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 
